--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mono-Higgs Fiducial Efficiencies - Upload</title>
+    <title>RECAST - An Analysis Reinterpretation Framework</title>
 
 
 
@@ -31,6 +31,8 @@
     <script type="text/javascript"
       src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
+
+    <script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
 
     </head>
     <body>
