--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
 $(document).ready(function(){
 
-    var socket = io.connect('http://localhost:8000/monitor');
+    var socket = io.connect(location.origin+'/monitor');
 
     socket.emit('helloServer')
     socket.emit('subscribe')
