--- a/templates/home.html
+++ b/templates/home.html
@@ -37,9 +37,19 @@ $(document).ready(function(){
             This is an early prototype for the RECAST framework. This web application communicates with the RECAST front-end at http://recast.perimeterinstitute.ca and provides a plugin model for analyses.
         </p>
 
+        <h2>Instructions</h2>
         <p>
-            Also supported: run arbitrary rivet analyses on parton level (unshowered) LHE files. <a href={{url_for('rivet.rivet_new_request')}}>create a request here</a>
-         </p>
+            <ol>
+            <li>To test the RECAST service, click on the <a href="{{url_for('recast.recast_analyses_view')}}">All Analyses</a> link in the navigation above. Select the analyses that you want to recast.</li>
+            <li>To create a new request click the "New RECAST Request" button and fill out the form. After you created the request you can clock through to the page describing your new request</li>
+            <li>On the request page you can now upload simulated events for specific parameter points in the Les Houches format (currently they need a '*.event' extension as per ATLAS convention). To do that click the "Add Parameter Point" button, describe the parameter point and select the necessary event files</li>
+            <li>Now that you have created a parameter point, you can process the request by hitting the "Process" button. Once the results become available you can view the results for the parameter point (you will need to reload the page at the moment).
+        </ol>
+
+        <h3>Running Rivet analyses</h3>
+        RECAST also support running arbitrary LHC Rivet analyses. <a href="{{url_for('rivethome')}}">Read more</a>
+        </p>
+        
 
         <h2>Links and Related Projects</h2>
         <ul>
