--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@ $(document).ready(function(){
 
 {% block container%}
 <div class="page-header">
-    <h1>Recast <small>An Analysis Reinterpretation Framework</small></h1>
+    <h1>Recast Control Center<small>An Analysis Reinterpretation Framework</small></h1>
 </div>    
 
 <div class="row">
