--- a/templates/home.html
+++ b/templates/home.html
@@ -30,6 +30,8 @@ $(document).ready(function(){
     <h1>Recast Control Center <small>An Analysis Reinterpretation Framework</small></h1>
 </div>    
 
+{{userinfo}}
+
 <div class="row">
     <div class="col-md-9">
         <h2>Introduction</h2>
