--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
                 
                     <ul class="nav navbar-nav navbar-right">
                     {% if session.has_key('user') %}
-                        <li id="nav-allreq"><a>Logged in as {{session['user']['username']}}</a></li>
+                        <li id="nav-allreq"><a href="/logout">Logged in as {{session['user']['username']}}. Logout</a></li>
                     {% else %}
                         <li id="nav-allreq"><a href="/login">Login</a></li>
                     {% endif %}
