minor text changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@ $(document).ready(function(){
         <p>
             This is an early prototype for the RECAST control center. While the RECAST front-end at  <a href="http://recast.perimeterinstitute.ca">http://recast.perimeterinstitute.ca</a> is used to gather requests for analysis reinterpretation from the community, this web application is used to launch jobs for different back-ends that actually perform the reinterpretation.
         </p>
-        <p>It supports CERN SSO authentication which will allow for fine-grained control over which users are able to launch the reinterpretation jobs and/or upload the results to the front-end. This web application provides a plugin model for analyses. Currently, we have a template plugin for Rivet analyses that runs quickly. We are working with CERN IT’s analysis preservationproduct to provide a template plugin for reinterpretation basedon the full simulation, reconstruction, and event selection.
+        <p>It supports CERN SSO authentication which will allow for fine-grained control over which users are able to launch the reinterpretation jobs and/or upload the results to the front-end. This web application provides a plugin model for analyses. Currently, we have a template plugin for Rivet analyses that runs quickly. We are working with CERN IT's analysis preservation product to provide a template plugin for reinterpretation based on the full simulation, reconstruction, and event selection.
         </p>
         <p>For convenience, one can initiate a request directly from the control center, which will be uploaded to the front-end.
 </p>
@@ -45,7 +45,7 @@ $(document).ready(function(){
 
         <h2>Links and Related Projects</h2>
         <ul>
-            <li><a href="http://arxiv.org/abs/1010.2506">original white paper</a></li>
+            <li><a href="http://arxiv.org/abs/1010.2506">Original white paper</a> by Cranmer and Yavin</li>
             <li><a href="https://twiki.cern.ch/twiki/pub/AtlasPublic/AtlasPolicyDocuments/A78_ATLAS_Data_Access_Policy.pdf">ATLAS Data Access Policy </a></li>
             <li><a href="http://arxiv.org/pdf/1205.4667.pdf">DPHEP Status Report</a></li>
             <li><a href="https://daspos.crc.nd.edu">DASPOS</a></lie>
